log-exploration-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  name: openshift-logging
  labels:
    openshift.io/cluster-monitoring: "true" # enables this namespace to be monitored by openshift
