log-exploration-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-exploration-api
  namespace: openshift-logging
  labels:
    app: log-exploration-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-exploration-api
  template:
    metadata:
      labels:
        app: log-exploration-api
    spec:
      containers:
      - name: log-exploration-api-container
        image: quay.io/openshift-logging/log-exploration-api:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
          - name: certificates
            mountPath: /etc/openshift/elasticsearch/secret
      volumes:
        - name: certificates
          secret:
             secretName: elasticsearch
             defaultMode: 420
