log-exploration-api-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: log-exploration-api-route
  namespace: openshift-logging
  labels:
    app: log-exploration-api-route
spec:
  to:
    kind: Service
    name: log-exploration-api-service
